completed filterd todo list

--- a/style.css
+++ b/style.css
@@ -6,13 +6,14 @@ flex-direction: column;
 align-items: center;
 }
 
-.buttons {
+#sectionTop {
   position: fixed;
   z-index: 1;
-  height: 30px;
+  height: 50px;
   width: 100%;
   background-color: #b3ecff;
   text-align: center;
   border-bottom: 1px solid black;
   margin-bottom: 160px;
+  padding-top: 5px;
 }
